--- a/App3/Views/Home/Index.cshtml
+++ b/App3/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome to Azure App Service</h1>
+    <p>Have a Nice day</p>
+    <p>Date :- @DateTime.Now.ToLongDateString() </p>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
